--- a/src/components/ArticleList/ArticleList.scss
+++ b/src/components/ArticleList/ArticleList.scss
@@ -1,3 +1,9 @@
+@import '~antd/dist/antd.css';
+
+.pagination {
+  margin-bottom: 22px;
+}
+
 .article-list {
   display: flex;
   flex-direction: column;
